--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/LEGEND ZELDA BREATH WILD.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/LEGEND ZELDA BREATH WILD.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>The Legend of Zelda: Breath of the Wild es la nueva aventura de acción de Nintendo para Wii U y Nintendo Switch que nos presenta el título más 
+            <p class="centrar letraVJ">The Legend of Zelda: Breath of the Wild es la nueva aventura de acción de Nintendo para Wii U y Nintendo Switch que nos presenta el título más 
                 ambicioso de la saga con un mundo abierto por explorar y en el que realizar todo tipo de acciones como escalar además de otras clásicas como nadar o montar a caballo.
                  Link despierta tras un profundo sueño de 100 años en un misterioso templo en el reino de Hyrule; junto a él, deberemos descubrir su pasado mientras escuchamos una voz que nos 
                  incita a enfrentarnos a un malvado ser que provocó el llamado cataclismo: Ganon. Los sucesos del juego toman lugar cien años después de que una terrible catástrofe dejase al Reino de Hyrule en ruinas.
