--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/MARIO KART 8.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/MARIO KART 8.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Mario Kart 8 Deluxe es un juego imprescindible. Unas carreras emocionantes que sacan partido a la arquitectura única de Nintendo Switch y 
+            <p class="centrar letraVJ">Mario Kart 8 Deluxe es un juego imprescindible. Unas carreras emocionantes que sacan partido a la arquitectura única de Nintendo Switch y 
                 que estallan en el modo multijugador... siempre que no tengamos la versión de Wii U, que aparte de 6 nuevos corredores, algunos objetos y los modos batalla,
                  es idéntica. Nintendo Switch es una consola diseñada para juegos como Mario Kart 8 Deluxe. A medida que realizábamos este análisis, nos dábamos cuenta de cómo 
                  se ha perfeccionado esta fórmula, que comenzó en Super Nintendo hace más de 20 años, y lo bien que funciona todavía. Un total de 42 personajes de la franquicia
