--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/MARIO PARTY.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/MARIO PARTY.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Super Mario Party es la nueva entrega de la saga de Mario Party, anunciada en el E3 de 2018. Este juego es el onceavo entre los juegos de sobremesa.
+            <p class="centrar letraVJ">Super Mario Party es la nueva entrega de la saga de Mario Party, anunciada en el E3 de 2018. Este juego es el onceavo entre los juegos de sobremesa.
                 Una de sus características es que vuelve el sistema clásico de tableros que había estado ausente desde Mario Party 8. Los jugadores irán por su cuenta en un tablero, 
                 comprando estrellas con las monedas que ganen en minijuegos. También incluye características de otros Mario Party, como: los tableros libres de Mario Party: Star Rush, 
                 los compañeros y dados personalizados por cada personaje. Hay 20 personajes jugables en tota, el cual es el mayor número de personajes jugables hasta ahora en la saga Mario Party.
