--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/MARIO Y SONIC TOKIO.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/MARIO Y SONIC TOKIO.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> Un año más, Mario y Sonic regresan a los Juegos Olímpicos para traernos toda la acción de los deportes, en esta ocasión a Nintendo Switch.
+            <p class="centrar letraVJ"> Un año más, Mario y Sonic regresan a los Juegos Olímpicos para traernos toda la acción de los deportes, en esta ocasión a Nintendo Switch.
                  Mario & Sonic en los Juegos Olímpicos: Tokio 2020 es la primera entrega de la serie que llega a la consola híbrida y llega cargada de contenidos
                   para poder pasar grandes ratos con Mario, Sonic y compañía. Si bien muchos de vosotros ya estaréis familiarizados con el estilo de juego de las entregas de
                    Mario & Sonic en los Juegos Olímpicos, en este análisis profundizaremos tanto en los aspectos básicos como en las diferentes opciones que nos ofrece este juego, 
