--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/METROID.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/METROID.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Metroid Prime (メトロイドプライム, Metoroido Puraimu) es un juego de acción aventura en primera persona desarrollado por Retro Studios
+            <p class="centrar letraVJ">Metroid Prime (メトロイドプライム, Metoroido Puraimu) es un juego de acción aventura en primera persona desarrollado por Retro Studios
                  y lanzado por Nintendo para la consola Nintendo GameCube. Es el primer juego de la saga en estar en completo 3D y también el primero 
                  en tener un modo de juego en primera persona. Metroid Prime marcó el inició de un nuevo estilo de juego para la serie Metroid, siendo
                   el primer juego de lo que después sería conocido como serie Prime. Cronológicamente en el segundo juego de la saga, tomando lugar tras
