--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/MONSTER HUNTER RISE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/MONSTER HUNTER RISE.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>A finales de 2017 Capcom sorprendió al mundo con Monster Hunter World, la que hasta el momento era la última entrega de la serie.
+            <p class="centrar letraVJ">A finales de 2017 Capcom sorprendió al mundo con Monster Hunter World, la que hasta el momento era la última entrega de la serie.
                  Casi cuatro años después se ha convertido en el juego más vendido de la franquicia, pero desde Japón tenían que llegar a otros
                   territorios. Para eso llega Monster Hunter Rise. ¿Su objetivo? Trasladar las increíbles sensaciones de su predecesor, pero ahora
                    en la consola híbrida de Nintendo. La historia de Monster Hunter Rise nos lleva a la Aldea Kamura, un pequeño emplazamiento situado
