--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/POKEMON LETS GO PIKACHU.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/POKEMON LETS GO PIKACHU.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> 'Pokémon Let's Go! Pikachu' es una reimaginación del clásico de primera generación 'Pokémon Amarillo' para Nintendo Switch.
+            <p class="centrar letraVJ"> 'Pokémon Let's Go! Pikachu' es una reimaginación del clásico de primera generación 'Pokémon Amarillo' para Nintendo Switch.
                  No se trata de un remake, pues contará con novedades con respecto a la primera entrega y narrará una historia inédita hasta la fecha.
                   'Pokémon Let's Go! Pikachu' nos devolverá a la región de Kanto para hacernos con las 151 criaturas originales, exclusivamente.
                    La manera de capturarlas se asemeja a 'Pokémon GO', por lo que desaparece la interacción clásica de las entregas troncales.
