--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/SPLATOON 2.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/SPLATOON 2.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Splatoon 2 es un videojuego de acción en tercera persona que hace especial énfasis en la faceta multijugador, tanto en la vertiente 
+            <p class="centrar letraVJ">Splatoon 2 es un videojuego de acción en tercera persona que hace especial énfasis en la faceta multijugador, tanto en la vertiente 
                 competitiva como cooperativa. Esta segunda parte también incluye un modo historia, para un único jugador. El núcleo jugable vuelve
                 a ser el mismo de siempre, pues deberemos disparar pintura por todos los lados posibles del escenario y contra nuestros rivales,
                 sumergiéndonos en la citada tinta para recargarnos y continuar con nuestra misión. La mecánica es sencilla, muy adictiva, y apta para todos los públicos,
