--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/STORY OF SEASONS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/STORY OF SEASONS.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> Story of Seasons es una saga que emula una vida en la granja y que, al mismo tiempo, abraza la simulación social. 
+            <p class="centrar letraVJ"> Story of Seasons es una saga que emula una vida en la granja y que, al mismo tiempo, abraza la simulación social. 
                 Ninguno de sus capítulos llega a tener la profundidad de Farm Simulator o Los Sims en sus respectivas áreas pero
                  entretienen tanto o más que ambos juntos. Su desenfadado aspecto o la sencillez de algunas de sus rutinas —aunque no siempre es así—
                   los hacen juegos muy entretenidos y fáciles de asimilar. Comenzamos nuestra vida rural tras una pequeña escena de vídeo donde se nos 
