--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/SUPER SMASH BROS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/SUPER SMASH BROS.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Super Smash Bros. Ultimate es un videojuego crossover de lucha desarrollado por Bandai Namco Studios y Sora Ltd. y publicado 
+            <p class="centrar letraVJ">Super Smash Bros. Ultimate es un videojuego crossover de lucha desarrollado por Bandai Namco Studios y Sora Ltd. y publicado 
                 por Nintendo para la consola Nintendo Switch. Se trata de la quinta entrega de la serie Super Smash Bros, sucediendo a Super Smash Bros.
                  para Nintendo 3DS y Wii U, cuyo lanzamiento se produjo el 7 de diciembre de 2018. El videojuego sigue el estilo tradicional de la saga: 
                  controlando a uno de los varios personajes, los jugadores deben usar diferentes ataques para debilitar a sus oponentes y sacarlos de la arena.
