--- a/PROYECTO SEMESTRAL/Exclusivo PC/BATTLE TECH.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/BATTLE TECH.html
@@ -69,7 +69,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>BattleTech es una franquicia de ciencia ficción y juegos de guerra 
+            <p class="centrar letraVJ">BattleTech es una franquicia de ciencia ficción y juegos de guerra 
                 (también designados por el anglicismo wargames) creada por FASA Corporation y, actualmente, propiedad de WizKids.
                  La serie comenzó en 1984 cuando se lanzó al mercado en Estados Unidos el juego de tablero BattleDroids. Lucasfilm 
                  exigió en ese momento que el juego fuera rebautizado o retirado de la venta porque los derechos de la palabra droid
