--- a/PROYECTO SEMESTRAL/Exclusivo PC/BLACK MESA.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/BLACK MESA.html
@@ -69,7 +69,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Black Mesa (previamente conocido como Black Mesa: Source) es un videojuego de disparos en primera persona desarrollado y publicado
+            <p class="centrar letraVJ">Black Mesa (previamente conocido como Black Mesa: Source) es un videojuego de disparos en primera persona desarrollado y publicado
                  por Crowbar Collective. Es una nueva versión del videojuego Half-Life que utiliza el motor gráfico Source. Fue originalmente publicado 
                  como un mod gratuito en septiembre de 2012 y luego fue aprobado por Valve (los desarrolladores de Half-Life) para su lanzamiento comercial
                  . La versión comercial fue publicada como un título de acceso anticipado en mayo de 2015 y su versión completa fue lanzada en marzo de 2020
