--- a/PROYECTO SEMESTRAL/Exclusivo PC/COUNTER STRIKE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/COUNTER STRIKE.html
@@ -69,7 +69,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Counter-Strike: Global Offensive (CS:GO) es un videojuego de disparos en primera persona desarrollado
+            <p class="centrar letraVJ">Counter-Strike: Global Offensive (CS:GO) es un videojuego de disparos en primera persona desarrollado
                  por Valve Corporation y Hidden Path Entertainment. Es el cuarto juego de la saga Counter-Strike. 
                  Fue lanzado al mercado en agosto de 2012 para las plataformas de Microsoft Windows, macOS.
                   La versión para Linux estuvo disponible al público en septiembre de 2014.
