--- a/PROYECTO SEMESTRAL/Exclusivo PC/DEVOUR.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/DEVOUR.html
@@ -69,7 +69,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>DEVOUR es un juego cooperativo de supervivencia para 1-4 jugadores. Detén a los poseídos miembros
+            <p class="centrar letraVJ">DEVOUR es un juego cooperativo de supervivencia para 1-4 jugadores. Detén a los poseídos miembros
                  del culto antes de que te arrastren al infierno. Corre, Grita, Escondete, Evita ser atrapado. Modo cooperativo de 1-4 jugadores.
                  Toma el control de hasta 4 miembros del culto en esta experiencia cooperativa única donde deberán trabajar juntos para detener 
                  a los cultitas poseídos, que intentarán llevarte al infierno. Modo un jugador
