--- a/PROYECTO SEMESTRAL/Exclusivo PC/EUROPA UNIVERSALIS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/EUROPA UNIVERSALIS.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Europa Universalis IV es un videojuego de estrategia 4X desarrollado por Paradox Development Studio y publicado
+            <p class="centrar letraVJ">Europa Universalis IV es un videojuego de estrategia 4X desarrollado por Paradox Development Studio y publicado
                  por Paradox Interactive. Fue anunciado en agosto de 2012 y se puso a la venta el 13 de agosto de 2013.
                 El juego mantiene el mismo estilo de juego que las entregas anteriores, y la campaña principal comienza el
                  11 de noviembre de 1444 un día después del fin de la Batalla de Varna y finaliza el 2 de enero de 1821.
