--- a/PROYECTO SEMESTRAL/Exclusivo PC/EVE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/EVE.html
@@ -69,7 +69,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Eve Online es un MMORPG-RTS ambientado en el espacio. El jugador es capaz de pilotar diferentes naves
+            <p class="centrar letraVJ">Eve Online es un MMORPG-RTS ambientado en el espacio. El jugador es capaz de pilotar diferentes naves
                  espaciales recorriendo una parte de una galaxia a través de más de 7.800 sistemas estelares.Los 
                  sistemas estelares están conectados a otros sistemas por puertas de salto (stargates o jumpgates).
                   Los sistemas estelares contienen diferentes elementos, como: estrellas, planetas, lunas, cinturones 
