--- a/PROYECTO SEMESTRAL/Exclusivo PC/PACIFY.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/PACIFY.html
@@ -69,7 +69,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Acaba de iniciar sesión con PAH Inc. Paranormal Activity Helpers Incorporated, sí, suena cursi, pero la paga es excelente.
+            <p class="centrar letraVJ">Acaba de iniciar sesión con PAH Inc. Paranormal Activity Helpers Incorporated, sí, suena cursi, pero la paga es excelente.
                  Dijeron que nunca estarás en ningún peligro real, y tienen un montón de trabajo ahora mismo. Tu primer trabajo es en una
                   vieja casa encantada. Hay un agente que quiere poner la casa en venta, pero con todos en la ciudad difundiendo rumores
                    de que el mal vive dentro de la casa, necesita alguna prueba de que es segura. La verdad es que parece atemorizado De 
