--- a/PROYECTO SEMESTRAL/Exclusivo PC/PALADINS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/PALADINS.html
@@ -69,7 +69,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Paladins: Champions of the Realm es un videojuego gratuito en línea de disparos en primera persona con componentes de hero shooter.
+            <p class="centrar letraVJ">Paladins: Champions of the Realm es un videojuego gratuito en línea de disparos en primera persona con componentes de hero shooter.
                 El 9 de octubre de 2012 Hi-Rez anunció estar trabajando en dos nuevos juegos que serían los sucesores de Global Agenda (otro juego
                  de la compañía) varios años después se anunciaría paladins, que sería el primero de estos juegos el otro sería rogue company, 
                  el 4 de agosto del 2015 comenzaron las inscripciones para participar en una beta cerrada después de estar en alpha por 2 meses,
