--- a/PROYECTO SEMESTRAL/Exclusivo PC/TEAM FOREST.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/TEAM FOREST.html
@@ -69,7 +69,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Team Fortress 2, abreviado por su acrónimo TF2, es un videojuego multijugador de disparos en primera persona desarrollado 
+            <p class="centrar letraVJ">Team Fortress 2, abreviado por su acrónimo TF2, es un videojuego multijugador de disparos en primera persona desarrollado 
                 y publicado por Valve Corporation. Es la secuela del mod de 1996 para Quake del mismo nombre y su remake de 1999, Team 
                 Fortress Classic. Fue lanzado por primera vez como parte de la recopilación de videojuegos The Orange Box el 10 de octubre 
                 de 2007 para Windows y Xbox 360. Posteriormente se lanzó también una versión para PlayStation 3. Más tarde, el 8 de abril
