--- a/PROYECTO SEMESTRAL/Exclusivo PC/WARFACE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/WARFACE.html
@@ -69,7 +69,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Warface es un juego de disparos militar construido sobre una base de disparos satisfactorios, movimientos hábiles y efectos visuales nítidos.
+            <p class="centrar letraVJ">Warface es un juego de disparos militar construido sobre una base de disparos satisfactorios, movimientos hábiles y efectos visuales nítidos.
                 PCGamesN
                 Warface es un juego de disparos en primera persona de aspecto arenoso que se centra principalmente en el modo multijugador en línea. 
                 No presenta habilidades como correr por las paredes, mochilas propulsoras o ataques especiales, pero eso no perjudica el juego. Adopta
