--- a/PROYECTO SEMESTRAL/Exclusivo Play/BATMAN_ARKHAM_KNIGHT.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/BATMAN_ARKHAM_KNIGHT.html
@@ -67,7 +67,7 @@
            </div> 
            <div class="col-md-8 col-sm-12">
             <h2>Descripcion</h2><br>
-            <p>Batman: Arkham Knight es un videojuego de acción-aventura y mundo abierto desarrollado por Rocksteady Studios y lanzado por Warner Bros. 
+            <p class="centrar letraVJ">Batman: Arkham Knight es un videojuego de acción-aventura y mundo abierto desarrollado por Rocksteady Studios y lanzado por Warner Bros. 
                 Interactive Entertainment para las consolas PlayStation 4, PlayStation 3 y Microsoft Windows.  Basado en el superhéroe de DC Comics Batman, 
                 es el sucesor del videojuego de 2013 Batman: Arkham Origins, y el cuarto juego principal 
                  en la serie Batman: Arkham .Kevin Conroy interpretó a Batman de nuevo, al igual que Mark Hamill con el Joker. Fue lanzado a nivel mundial el 23 de junio de 2015.
