--- a/PROYECTO SEMESTRAL/Exclusivo Play/BIOMUTANT.HTML
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/BIOMUTANT.HTML
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Biomutant es un juego de rol de acción ambientado en un entorno de mundo abierto y
+            <p class="centrar letraVJ">Biomutant es un juego de rol de acción ambientado en un entorno de mundo abierto y
                 jugado desde una perspectiva en tercera persona en el que el jugador toma el control de un guerrero mamífero en
                 un mundo lleno de animales mutados. Los jugadores personalizan su personaje, incluida la longitud, la forma y el grosor del cuerpo,
                 el pelaje, los colmillos y muchos otros atributos que se pueden modificar y que tienen un impacto directo en las estadísticas del
