--- a/PROYECTO SEMESTRAL/Exclusivo Play/CHRONOS BEFORE THE ASHES.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/CHRONOS BEFORE THE ASHES.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Chronos: Before the Ashes es un juego de rol atmosférico que narra la búsqueda de toda
+            <p class="centrar letraVJ">Chronos: Before the Ashes es un juego de rol atmosférico que narra la búsqueda de toda
                  la vida de un héroe para salvar su tierra natal de un gran mal. Hazte más sabio, más
                   fuerte y más poderoso a medida que exploras las profundidades del misterioso laberinto
                   . Pero cuidado, el laberinto cobra un alto precio: ¡cada vez que tu héroe muere, pierde 
