--- a/PROYECTO SEMESTRAL/Exclusivo Play/DEMOS'N SOULS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/DEMOS'N SOULS.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Demon's Souls  es un juego de rol de acción de 2009 desarrollado por FromSoftware para PlayStation 3, pero ahora optimizado para PlayStation 5 bajo la supervisión de Japan Studio .
+            <p class="centrar letraVJ">Demon's Souls  es un juego de rol de acción de 2009 desarrollado por FromSoftware para PlayStation 3, pero ahora optimizado para PlayStation 5 bajo la supervisión de Japan Studio .
                  Fue publicado en Japón por Sony Computer Entertainment en febrero, en Norteamérica por Atlus USA en octubre y en los territorios PAL por
                   Namco Bandai Partners en junio de 2010. El juego se conoce como el sucesor espiritual de la serie King's Field de FromSoftware
 
