--- a/PROYECTO SEMESTRAL/Exclusivo Play/GHOST OF TSUSHIMA.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/GHOST OF TSUSHIMA.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Ghost of Tsushima es un videojuego de acción-aventura desarrollado por Sucker Punch Productions y
+            <p class="centrar letraVJ">Ghost of Tsushima es un videojuego de acción-aventura desarrollado por Sucker Punch Productions y
                  publicado por Sony Interactive Entertainment para PlayStation 4 y PlayStation 5. Con un mundo abierto para que los jugadores exploren
                  , el juego gira en torno al último samurái en la isla de Tsushima durante la primera invasión mongola de Japón. El lanzamiento del juego
                   se produjo el 17 de julio de 2020. El 25 de marzo de 2021 en la cuenta oficial de instagram de Sucker Punch Productions anunciaron que tendrá su propia película, la fecha aun esta 
