--- a/PROYECTO SEMESTRAL/Exclusivo Play/GOD OF WAR.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/GOD OF WAR.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> Las armas principales de Kratos durante todo el videojuego son un hacha llamada "Leviathan" y un escudo.
+            <p class="centrar letraVJ"> Las armas principales de Kratos durante todo el videojuego son un hacha llamada "Leviathan" y un escudo.
                  El Leviathan se puede lanzar para golpear o congelar a ciertos rivales, y regresará a la mano del personaje al oprimir un botón.
                   Mientras que el escudo se utiliza tanto para retener y contraatacar golpes como para atacar a los enemigos durante el combate. Esta vez los saltos
                    y dobles saltos de Kratos son suspendidos para dejar lugar a la escalada como forma de exploración de este nuevo mundo. Otro aspecto novedoso en la
