--- a/PROYECTO SEMESTRAL/Exclusivo Play/HORIZON FORBIDES WEST.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/HORIZON FORBIDES WEST.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Horizon Forbidden West (también Horizon II por el pequeño número en el logo) es un videojuego de rol de acción, aventura y mundo abierto desarrollado por
+            <p class="centrar letraVJ">Horizon Forbidden West (también Horizon II por el pequeño número en el logo) es un videojuego de rol de acción, aventura y mundo abierto desarrollado por
                  Guerrilla Games y distribuido por Sony Interactive Entertainment, exclusivamente para PlayStation 4 y PlayStation 5. Es la secuela de Horizon Zero Dawn.
                   El juego está protagonizado por Aloy, una joven cazadora de la tribu Nora que viaja al Oeste Prohibido para investigar una misteriosa y mortífera plaga
                    mientras hace frente a otros peligros. Los jugadores controlan una vez más a Aloy, una joven guerrera y cazadora de la tribu Nora. Al igual que Horizon Zero Dawn
