--- a/PROYECTO SEMESTRAL/Exclusivo Play/KINGDOMS OF AMALUR.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/KINGDOMS OF AMALUR.html
@@ -78,7 +78,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Kingdom of Amalur: Reckoning es la remasterización del videojuego de rol creado por
+            <p class="centrar letraVJ">Kingdom of Amalur: Reckoning es la remasterización del videojuego de rol creado por
                  grandes nombres de la fantasía, el novelista R.A. Salvatore, el creador de Spawn Todd McFarlane y el 
                  diseñador de The Elder Scrolls IV: Oblivion, Ken Rolston. El videojuego nos invitará a viajar a deun mundo 
                  asolado por una cruenta guerra, ofreciéndonos controlar las llaves de la inmortalidad encarnando al primer guerrero resucitado de las garras de la muerte.
