--- a/PROYECTO SEMESTRAL/Exclusivo Play/MAFIA II.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/MAFIA II.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Mafia II: Definitive Edition es una aventura de acción a cargo de Hangar 13 y 2K Games 
+            <p class="centrar letraVJ">Mafia II: Definitive Edition es una aventura de acción a cargo de Hangar 13 y 2K Games 
                  PlayStation 4 , una remasterización de la entrega original en la que seguimos la historia de la mafia de 
                  los años 40 en Empire Bay, Nueva York. Vive como un gánster en la edad de oro del crimen organizado de los EE. UU. 
                  ahora con un impresionante detalle en HD. El héroe de guerra Vito Scaletta se mezcla con la mafia con la esperanza de
