--- a/PROYECTO SEMESTRAL/Exclusivo Play/SPIDERMAN.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/SPIDERMAN.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Spider-Man para PS4 es un videojuego de acción y aventuras con un estilo jugable de mundo abierto, que permite al jugador desplazarse de 
+            <p class="centrar letraVJ">Spider-Man para PS4 es un videojuego de acción y aventuras con un estilo jugable de mundo abierto, que permite al jugador desplazarse de 
             un lugar a otro con total libertad de movimientos y que tiene por escenario donde de desarrolla la historia, la ciudad de Nueva York. El juego
              está desarrollado por Imsomniac Games, creadores de juegos como Spyro, Ratchet & Clank o Sunset Overdrive, entre otros y además está producido
               por Sony como videojuego exclusivo de PlayStation 4.
