--- a/PROYECTO SEMESTRAL/Exclusivo Play/THE LAST OF US.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/THE LAST OF US.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>The Last of Us Part II es un videojuego de terror y de acción y aventuras de 2020 desarrollado por Naughty Dog
+            <p class="centrar letraVJ">The Last of Us Part II es un videojuego de terror y de acción y aventuras de 2020 desarrollado por Naughty Dog
                  y publicado por Sony Interactive Entertainment para PlayStation 4. Ambientado cinco años después de The Last of Us
                   (2013), el juego se centra en dos personajes jugables en un Estados Unidos post-apocalíptico cuyas vidas se entrelazan:
                    Ellie, que busca venganza después de sufrir una tragedia, y Abby, una soldado que se ve envuelta en un conflicto entre su
