--- a/PROYECTO SEMESTRAL/Exclusivo Play/THE SURGE 2.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/THE SURGE 2.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>The Surge 2 es un videojuego de rol de acción jugado desde una perspectiva en tercera persona.
+            <p class="centrar letraVJ">The Surge 2 es un videojuego de rol de acción jugado desde una perspectiva en tercera persona.
                  El videojuego presenta a un creador de personajes que permite a los jugadores personalizar las apariencias y el género de su 
                  avatar de jugador. Los jugadores pueden utilizar una variedad de armas cuerpo a cuerpo para derrotar a los enemigos, cuyas 
                  extremidades pueden ser atacadas y eliminadas individualmente. Los jugadores también pueden esquivar y protegerse de ataques,
