--- a/PROYECTO SEMESTRAL/Exclusivo Play/ZOMBIE DRIVER.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/ZOMBIE DRIVER.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Una mezcla excéntrica de coches, velocidades, explosiones, sangre y zombis. Lucha en campaña épica o ponte a prueba en el modo 
+            <p class="centrar letraVJ">Una mezcla excéntrica de coches, velocidades, explosiones, sangre y zombis. Lucha en campaña épica o ponte a prueba en el modo 
                 Carnicería o Carrera Sangrienta. Enfréntate a los grandes jefes, rescata a la gente, conduce vehículos como bulldozer, coche de 
                 bomberos o tanque y destruye todo en el camino.
                 Participa en Carrera Sangrienta, persigue otros coches y destrúyelos sin piedad en las rutas retorcidas. Salta 
