--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/A PLAGUE TALE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/A PLAGUE TALE.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>En A Plague Tale: Innocence, el jugador toma el control de Amicia de Rune desde una perspectiva en tercera persona, con una jugabilidad centrada en el sigilo y la resolución de puzles.
+            <p class="centrar letraVJ">En A Plague Tale: Innocence, el jugador toma el control de Amicia de Rune desde una perspectiva en tercera persona, con una jugabilidad centrada en el sigilo y la resolución de puzles.
                  Durante gran parte del juego, el jugador tiene que ocultarse y evitar encuentros hostiles con los enemigos ya que estos pueden matar a Amicia instantáneamente. Principalmente, Amicia se tiene que enfrentar a soldados de la Inquisición francesa,
                   pero también soldados ingleses y aldeanos de la región. Amicia está equipada con una honda, con la que puede lanzar piedras para romper cadenas, crear distracciones o aturdir a los enemigos el tiempo suficiente para que hordas de ratas les ataquen. También es posible matar a los enemigos si Amicia lanza una piedra en la cabeza, si esta está desprotegida. </p>
             </div></div>
