--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/DESTINY.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/DESTINY.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Destiny es un videojuego de disparos en primera persona, en forma de multijugador masivo en línea en un mundo abierto de ficción especulativa.
+            <p class="centrar letraVJ">Destiny es un videojuego de disparos en primera persona, en forma de multijugador masivo en línea en un mundo abierto de ficción especulativa.
                  Fue desarrollado por Bungie y publicado por Activision como parte de un contrato de producción de diez años. Se lanzó a nivel mundial el 9 de septiembre de 2014. 
                  Según las empresas desarrolladoras, los costos de desarrollo y marketing superaron los 500 millones de dólares, pero no precisaron las cifras definitivas,
                  aunque algunos periódicos precisaron que sólo la gran campaña de publicidad desplegada habría supuesto unos gastos de 200 millones de dólares.​ Un día después de su lanzamiento, 
