--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS OF WAR 3.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS OF WAR 3.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Gears of War 3 es el tercer videojuego de la Serie Gears of War, desarrollado por Epic Games y distribuido por Microsoft Studios como exclusiva para la consola Xbox 360 el 20 de septiembre de 2011.
+            <p class="centrar letraVJ">Gears of War 3 es el tercer videojuego de la Serie Gears of War, desarrollado por Epic Games y distribuido por Microsoft Studios como exclusiva para la consola Xbox 360 el 20 de septiembre de 2011.
                  Al igual que sus predecesores, se trata de un juego de disparos en tercera persona, basado en un sistema de coberturas.Esta entrega marca el final de la trilogía protagonizada por Marcus Fenix,
                   en la cual tanto la Horda Locust como la humanidad se ven diezmados por el auge de la especie Lambent. Gears of War 3 toma lugar 18 meses después de los acontecimientos culminantes de Gears of War 2, el Hundimiento de Jacinto, 
                   el último asentamiento humano, y de la Hondonada, el hogar de la Horda Locust. Con ambos bandos desperdigados, se da un ambiente propicio para el apogeo de los Lambent, una subespecie creada a partir del contacto de organismos vivos con la Imulsión. </p>
