--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/HALO INFINITE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/HALO INFINITE.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Halo Infinite es un videojuego de disparos en primera persona siendo la secuela de Halo 5: Guardians y Halo Wars 2.
+            <p class="centrar letraVJ">Halo Infinite es un videojuego de disparos en primera persona siendo la secuela de Halo 5: Guardians y Halo Wars 2.
                  Así como un reinicio espiritual de la saga. Fue revelado en la E3 de 2018 y originalmente sería lanzado al mercado junto con la Xbox Series X a finales de 2020 estando disponible también para Xbox One y Windows 10.
                   Sin embargo, en Agosto de 2020 343 Industries anunció que el juego sería retrasado, siendo el 8 de Diciembre de 2021 la fecha de lanzamiento. 
                   Ha pasado 1 año y 2 meses después de los acontecimientos de Halo 5: Guardians. La UNSC Infinity fue invadida y atacada por fuerzas de los Desterrados cerca de la Instalación 07 (Zeta Halo) con el Jefe Maestro despejando una zona de evacuación para ser atacado y derrotado por Atriox, 
