--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/MINECRAFT.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/MINECRAFT.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Minecraft es un videojuego sandbox enfocado en permitirle al jugador explorar y modificar un mundo generado dinámicamente hecho de bloques de un metro cúbico.
+            <p class="centrar letraVJ">Minecraft es un videojuego sandbox enfocado en permitirle al jugador explorar y modificar un mundo generado dinámicamente hecho de bloques de un metro cúbico.
                  Es mantenido por Mojang Studios, que forma parte de Xbox Game Studios, que a su vez es parte de Microsoft. Desde su creación, Minecraft fue desarrollado casi exclusivamente por Notch hasta que Jens "Jeb" Bergensten
                   comenzó a trabajar en él y desde entonces se ha convertido en el responsable de su desarrollo. Cuenta con música de Daniel "C418" Rosenfeld y de Lena Raine y cuadros de Kristoffer Zetterstrand. La versión inicial, conocida actualmente como Minecraft Classic, 
                   fue publicada el 17 de mayo de 2009. La versión completa del juego se publicó el 18 de noviembre de 2011. Desde su lanzamiento, Minecraft se ha ampliado a dispositivos móviles y consolas. El 6 de noviembre de 2014 Microsoft adquirió Minecraft y
