--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/MORTAL KOMBAT 11.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/MORTAL KOMBAT 11.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Mortal Kombat 11 es la nueva entrega de la violenta y salvaje saga de lucha de NetherRealm Studios para consolas y PC.
+            <p class="centrar letraVJ">Mortal Kombat 11 es la nueva entrega de la violenta y salvaje saga de lucha de NetherRealm Studios para consolas y PC.
                  Se trata de la undécima secuela de una serie de títulos de combate y peleas de marcada estructura 2D, que en esta ocasión, 
                  además de añadir los mejores gráficos de la serie y el gore más descarnado en los llamados Fatality, presentará luchadores clásicos y nuevos,
                   más modos de juego y una oferta online que quiere marcar un antes y un después en los eSports. Tras la derrota de Shinnok, 
