--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/NO MANS SKY.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/NO MANS SKY.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> No Man's Sky, anteriormente denominado Project Skyscraper,[1] es un juego de ciencia ficción procedural desarrollado por el desarrollador inglés Hello Games de Guildford, 
+            <p class="centrar letraVJ"> No Man's Sky, anteriormente denominado Project Skyscraper,[1] es un juego de ciencia ficción procedural desarrollado por el desarrollador inglés Hello Games de Guildford, 
                 Reino Unido. Hello Games es mejor conocido por su serie Joe Danger, y trajo su estilo de desarrollo único a No Man's Sky. El juego presenta exploración planetaria, océanos profundos,
                  batallas espaciales, depredadores y presas, y mucho más en varios mundos generados por generación procedural. Cada mundo tiene sus propios ecosistemas, recompensas y peligros, 
                  lo que lleva al jugador a través de los cuatro pilares centrales del juego: Explorar, Luchar, Comerciar y Sobrevivir.</p>
