--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/PAYDAY 2.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/PAYDAY 2.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>PAYDAY 2 es un juego de disparos cooperativo de primera persona con elementos RPG. Hasta 4 jugadores pueden cooperar en un atraco. El juego base tiene 12 atracos,
+            <p class="centrar letraVJ">PAYDAY 2 es un juego de disparos cooperativo de primera persona con elementos RPG. Hasta 4 jugadores pueden cooperar en un atraco. El juego base tiene 12 atracos,
                  varios los cuales tienen lugar en múltiples días y lugares. Overkill lanzaría nuevos atracos gratuitos o en DLCs de paga, aumentando el número de sitios de atracos únicos a más de 30.
                  Similar al PAYDAY original, los atracos tienen varios eventos dinámicos. Por ejemplo, los guardias pueden tener distintas rutas de patrullaje, las cajas fuertes pueden estar en diferentes sitios y la cantidad de dinero y botín puede ser diferente.
                   Algunos atracos, como el Bank Heist, tienen diferentes variantes dependiendo del objetivo (por ejemplo, dinero, oro, cajas de depósito, etc.) </p>
