--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/PROTOTYPE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/PROTOTYPE.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>El juego se desarrolla en New York City. Se narran los hechos de como un virus infecta a las personas y los intentos militares para poner fin a la misma. El protagonista de la historia se llama Alex Mercer, 
+            <p class="centrar letraVJ">El juego se desarrolla en New York City. Se narran los hechos de como un virus infecta a las personas y los intentos militares para poner fin a la misma. El protagonista de la historia se llama Alex Mercer, 
                 que ha enemiga de absorción de cambiar de forma y habilidades. Él puede conservar los recuerdos, las experiencias, la biomasa y las formas físicas de los enemigos que se consumen. 
                 Alex también puede cambiar la forma de partes de su cuerpo en formas más especializadas de las armas de ataque o defensa. Todo esto en conjunto tienen el propósito de dar a los jugadores múltiples maneras de completar sus objetivos. </p>
             </div></div>
