--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/deadrising.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/deadrising.html
@@ -67,7 +67,7 @@
            </div> 
            <div class="col-md-8">
             <h2>Descripcion</h2><br>
-            <p>Dead Rising es un videojuego de terror de acción-aventura, mundo abierto desarrollado por Capcom y producido por Keiji Inafune.
+            <p class="centrar letraVJ">Dead Rising es un videojuego de terror de acción-aventura, mundo abierto desarrollado por Capcom y producido por Keiji Inafune.
                  Fue lanzado el 8 de agosto de 2006 para la consola Xbox 360.  El juego fue un éxito comercial que fue introducido en la línea de Platinum Hits de Xbox 360 y un spin-off para teléfono móvil. 
                  La secuela llamada Dead Rising 2 fue desarrollada por Blue Castle Games en conjunto con varios desarrolladores anteriores de Dead Rising y lanzado en septiembre de 2010. La siguiente secuela es DEAD RISING 4 para XBOX ONE.
                   En donde regresa Frank West a Willamette en épocas de Navidad en 2016, en esta entrega no solo está desarrollado en el centro comercial, 
