--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/ARMS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/ARMS.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>ARMS es un juego de combate para Nintendo Switch que parece situarse en la tradición de Punch-Out con una estética desenfadada y futurista. 
+            <p class="centrar letraVJ">ARMS es un juego de combate para Nintendo Switch que parece situarse en la tradición de Punch-Out con una estética desenfadada y futurista. 
                 Los puños de los luchadores están unidos a su cuerpo por unos muelles que permiten atacar a distancia en el cuadrilatero. Gracias a su innovador control, 
                 diseñado para sacarle partido a los Joy-Con, se nos ofrecerá la posibilidad de encadenar golpes, desplazarnos por los escenarios de combate y lanzar ataques a distancia. </p>
             </div></div>
