--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/BAYONETTA 2.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/BAYONETTA 2.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>La bruja más poderosa, provocativa y sexy vuelve, en esta ocasión a Nintendo Switch, para demostrar que sigue sin haber enemigo demoníaco que la haga perder la paciencia o que pueda con ella. Únete a Bayonetta en esta nueva aventura y usa sus poderes, sus invocaciones e increíbles combos para avanzar con estilo a lo largo de los niveles. 
+            <p class="centrar letraVJ">La bruja más poderosa, provocativa y sexy vuelve, en esta ocasión a Nintendo Switch, para demostrar que sigue sin haber enemigo demoníaco que la haga perder la paciencia o que pueda con ella. Únete a Bayonetta en esta nueva aventura y usa sus poderes, sus invocaciones e increíbles combos para avanzar con estilo a lo largo de los niveles. 
                 En esta secuela del aclamado juego de acción Bayonetta, los jugadores estarán al borde de un ataque de nervios de principio a fin. Un juego de acción cargado de alucinantes batallas y bellas escenas cinemáticas. Lucha sobre un avión en pleno ascenso; pelea contra un gigantesco y angelical monstruo con un brazo que es un látigo capaz de matar sobre un tren a toda velocidad; y asciende a los cielos para enfrentarte a un dragón demoníaco en lo alto de un rascacielos. </p>
             </div></div>
 
