--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/DONKEY KONG COUNTRY.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/DONKEY KONG COUNTRY.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Donkey Kong Country es un videojuego desarrollado por la compañía Rare y distribuida por Nintendo, que incluye la descendencia del popular personaje de videojuegos, 
+            <p class="centrar letraVJ">Donkey Kong Country es un videojuego desarrollado por la compañía Rare y distribuida por Nintendo, que incluye la descendencia del popular personaje de videojuegos, 
                 Donkey Kong. Éste fue lanzado para la videoconsola SNES y Super Famicom en 1994. El juego fue lanzado en Japón bajo el título "Super Donkey Kong". 
                 Fue lanzado simultáneamente en todo el mundo y fue un juego realmente revolucionario por sus excepcionales gráficos en una máquina de tan sólo 16 bits.
                 En el juego, Donkey Kong tiene un nuevo compañero, Diddy Kong. Ambos tienen que recuperar la Reserva de Bananas robada de manos del Rey King K. Rool.
