--- a/PROYECTO SEMESTRAL/Exclusivo PC/CRUSADER KINGS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/CRUSADER KINGS.html
@@ -69,7 +69,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>El juego, tal como sus predecesores Crusader Kings y Crusader Kings II, es un juego de gran estrategia y
+            <p class="centrar letraVJ">El juego, tal como sus predecesores Crusader Kings y Crusader Kings II, es un juego de gran estrategia y
                  un simulador de dinastías ambientado en la Edad Media, entre la era vikinga y la caída de Constantinopla.
                   A diferencia de su predecesor, a fecha de la publicación, sólo tiene dos fechas de inicio: 867 y 1066. Las dinastías
                    pueden formar ramas cadete que tienen sus propios jefes y actúan independientemente de la dinastía padre. Los jefes 
