--- a/PROYECTO SEMESTRAL/Exclusivo PC/DOTA 2.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/DOTA 2.html
@@ -69,7 +69,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Dota 2 es un videojuego gratuito del género ARTS (Estrategia de Acción en Tiempo Real) también conocido como MOBA
+            <p class="centrar letraVJ">Dota 2 es un videojuego gratuito del género ARTS (Estrategia de Acción en Tiempo Real) también conocido como MOBA
                  (Multiplayer Online Battle Arena) distribuido por la plataforma Steam de Valve.
                 El origen de Dota 2 se remonta a StarCraft, en concreto Aeon of Strife (AoS), un mapa personalizado y el primer
                  MOBA de todos. Posteriormente, con el lanzamiento de Warcraft III y como una modificación del mismo, se creó “Defense
