--- a/PROYECTO SEMESTRAL/Exclusivo PC/ESCAPE FROM TARKOV.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/ESCAPE FROM TARKOV.html
@@ -69,7 +69,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Escape from Tarkov es un videojuego de acción bélica multijugador en primera persona para PC desarrollado
+            <p class="centrar letraVJ">Escape from Tarkov es un videojuego de acción bélica multijugador en primera persona para PC desarrollado
                 por Developer Battlestate Games que nos trasladará a la abandonada ciudad de Tarkov, en Rusia, en una lucha
                  sin cuartel entre facciones, guerrillas locales y otros enemigos. Realismo, supervivencia y acción se dan
                   la mano en un juego con trasfondo político y militar. </p>
