--- a/PROYECTO SEMESTRAL/Exclusivo PC/H1Z1.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/H1Z1.html
@@ -69,7 +69,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>H1Z1 es un videojuego battle royale multijugador (MMO) desarrollado por la empresa Daybreak Game Company
+            <p class="centrar letraVJ">H1Z1 es un videojuego battle royale multijugador (MMO) desarrollado por la empresa Daybreak Game Company
                  (anteriormente Sony Online Entertainment). El juego se encuentra disponible para Microsoft Windows, la
                   plataforma Steam y en PlayStation Network.
                 El 28 de febrero de 2018, el juego fue lanzado oficialmente, dejando atrás su etapa de acceso anticipado 
