--- a/PROYECTO SEMESTRAL/Exclusivo PC/HALF-LIFE ALYX.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/HALF-LIFE ALYX.html
@@ -69,7 +69,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Half-Life: Alyx es el regreso de Valve en realidad virtual a la serie Half-Life. Es la historia de una lucha
+            <p class="centrar letraVJ">Half-Life: Alyx es el regreso de Valve en realidad virtual a la serie Half-Life. Es la historia de una lucha
                  imposible contra una raza alienígena cruel conocida como la Alianza, situada entre los eventos de Half-Life y Half-Life 2.
                 Jugando como Alyx Vance, eres la única oportunidad de supervivencia de la humanidad. El control de
                  la Alianza sobre el planeta desde el incidente de Black Mesa solo se ha fortalecido a medida que
