--- a/PROYECTO SEMESTRAL/Exclusivo Play/DETROIT BECOME HUMAN.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/DETROIT BECOME HUMAN.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Detroit: Become Human es un videojuego de aventura gráfica, desarrollado por Quantic Dream y publicado por Sony Interactive Entertainment, 
+            <p class="centrar letraVJ">Detroit: Become Human es un videojuego de aventura gráfica, desarrollado por Quantic Dream y publicado por Sony Interactive Entertainment, 
                 inicialmente lanzado en exclusiva para la consola PlayStation Posteriormente, Quantic Dream anunció que abandonaba el contrato de exclusividad 
                 con Sony y que Detroit: Become Human saldría a la venta en Microsoft Windows. La fecha de lanzamiento para PlayStation 4 fue el 25 de mayo de 2018,
                  mientras que en PC fue lanzado el 12 de diciembre de 2019.
