--- a/PROYECTO SEMESTRAL/Exclusivo Play/HORIZON ZERO DAWN.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/HORIZON ZERO DAWN.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Horizon Zero Dawn es un videojuego de acción, aventura y de mundo abierto desarrollado por Guerrilla Games y distribuido por Sony Interactive Entertainment
+            <p class="centrar letraVJ">Horizon Zero Dawn es un videojuego de acción, aventura y de mundo abierto desarrollado por Guerrilla Games y distribuido por Sony Interactive Entertainment
                 para PlayStation 4 y Microsoft Windows. Es la primera propiedad intelectual de Guerrilla Games desde la serie Killzone en 2004 y se anunció por primera vez en el 
                 E3 2015.El juego está protagonizado por Aloy, una guerrera de la tribu de los Nora y está ambientado en un futuro post-apocalíptico donde las máquinas son la raza 
                 dominante de la Tierra. Los jugadores controlan a Aloy, una hábil arquera y cazadora de la tribu de los Nora. Con sus habilidades de combate, Aloy puede eliminar a sus
