--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/FORZA MOTORSPORT 5.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/FORZA MOTORSPORT 5.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Forza Motorsport 5 es un salto natural de la saga a la nueva generación, tal y como fue la segunda parte, aparecida en 2007 en Xbox 360. Aprovecha la potencia de Xbox One para mostrarnos unos coches mejor modelados y más espectaculares que nunca,
+            <p class="centrar letraVJ">Forza Motorsport 5 es un salto natural de la saga a la nueva generación, tal y como fue la segunda parte, aparecida en 2007 en Xbox 360. Aprovecha la potencia de Xbox One para mostrarnos unos coches mejor modelados y más espectaculares que nunca,
                  tanto por dentro como por fuera, y unos escenarios llenos de detalles, además de unos efectos visuales más vistosos. En este sentido, Forza Motorsport es el juego más llamativo de la nueva consola. No tiene esa épica y espectacularidad de Ryse, pero sí un acabado impecable,
                   con un motor gráfico que se mueve a la perfección, resolución 1080p y 60 fotogramas por segundo para transmitir una gran sensación de velocidad cuando juguemos con la vista en primera persona.
                  </p>
