--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS 5.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS 5.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> Gears 5 es la séptima entrega de la saga Gears of War. Es un videojuego de género shooter en tercera persona, desarrollado por The Coalition y publicado por Microsoft Studios.
+            <p class="centrar letraVJ"> Gears 5 es la séptima entrega de la saga Gears of War. Es un videojuego de género shooter en tercera persona, desarrollado por The Coalition y publicado por Microsoft Studios.
                  Se estrenó el 10 de septiembre de 2019 para Xbox One y Windows 10 y el 10 de noviembre de 2020 para Xbox Series X y Series S. Fue anunciado oficialmente durante la conferencia de prensa de Xbox en la E3 de 2018.
                  Tras los eventos de Gears of War 4, el mundo se está desmoronando. La dependencia de la tecnología de los humanos se ha convertido en su caída y los enemigos se están uniendo para eliminar a todos los sobrevivientes.
                  La narrativa del juego se centra en Kait Díaz, mientras viaja a través de Sera para descubrir los orígenes de Locust e intenta rescatar a los miembros de su pueblo que fueron secuestrados.</p>
