--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS OF WAR 4.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS OF WAR 4.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Han pasado 25 años desde que el Arma Desmanteladora de Imulsión creada por Adam Jonathon Fenix fuera utilizada con el fin de erradicar la Pandemia Lambent,
+            <p class="centrar letraVJ">Han pasado 25 años desde que el Arma Desmanteladora de Imulsión creada por Adam Jonathon Fenix fuera utilizada con el fin de erradicar la Pandemia Lambent,
                  a las hordas de los Locust y terminara por evaporar toda la Imulsión presente en el planeta Sera. Tras este evento, la humanidad fue forzada a buscar nuevas formas de supervivencia después de tener que dejar de depender de la Imulsión, 
                  el combustible fósil del planeta el cual prácticamente dejó de existir. Pero a consecuencia del uso del arma desmanteladora de Imulsión, el planeta entró en un estado de cataclismo climático en la forma de poderosos vendavales conocidos simplemente como 
                  "Llamaradas" obligando a la reformada Coalición de Gobiernos Ordenados a construir Asentamientos: ciudades amuralladas creadas para contener las fuertes corrientes de viento para proteger a los pocos humanos que quedaron tras la Guerra contra los Locust,
