--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/HADES.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/HADES.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Hades es un juego de rol de acción roguelike desarrollado y publicado por Supergiant Games. El juego fue lanzado para Microsoft Windows, 
+            <p class="centrar letraVJ">Hades es un juego de rol de acción roguelike desarrollado y publicado por Supergiant Games. El juego fue lanzado para Microsoft Windows, 
                 Xbox One y Series X el 17 de septiembre de 2020, que siguió a un lanzamiento de acceso anticipado en diciembre de 2018. Los jugadores controlan a Zagreus,
                  el hijo de Hades, mientras intenta escapar del Inframundo para llegar al Monte Olimpo, en ocasiones con la ayuda de los obsequios que le otorgan los otros olímpicos. 
                  Cada carrera desafía al jugador a través de una serie aleatoria de habitaciones pobladas de enemigos y recompensas, y el jugador usa una combinación de su ataque de arma principal,
