--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/HELLBLADE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/HELLBLADE.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Hellblade: Senua’s Sacrifice
+            <p class="centrar letraVJ">Hellblade: Senua’s Sacrifice
                 trata de hacer que los jugadores experimenten la psicosis clínica, ayudando a crear empatía y consciencia de las enfermedades mentales. Más allá de estas características, 
                 el juego en sí no es menos fascinante. Te pone en el lugar de Senua, una joven guerrera celta que desciende a lo profundo del inframundo nórdico para salvar a su amante, que fue masacrado por los vikingos.
                  Este viaje de Senua hacia el infierno es real en dos sentidos, en el estrictamente narrativo y en el psicológico, ya que Senua sufre de psicosis severa, y desde el principio nos damos cuenta de que ella se encuentra acompañada por voces y alucinaciones que la atormentan incesantemente. 
