--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/LEFT 4 DEAD.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/LEFT 4 DEAD.html
@@ -68,7 +68,7 @@
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p>Left 4 Dead 2 es un videojuego de disparos en primera persona de tipo acción creado por la compañía Valve. Corresponde a la secuela de Left 4 Dead y se lanzó al mercado el 17 de noviembre de 2009 en Estados Unidos y Latinoamérica.
+            <p class="centrar letraVJ">Left 4 Dead 2 es un videojuego de disparos en primera persona de tipo acción creado por la compañía Valve. Corresponde a la secuela de Left 4 Dead y se lanzó al mercado el 17 de noviembre de 2009 en Estados Unidos y Latinoamérica.
                  En Europa llegó tres días después, el 20 de noviembre. El 14 de diciembre de 2009 fue anunciado el primer contenido descargable para esta secuela: una nueva campaña llamada "Defunción", que se desarrolla entre las dos primeras campañas del juego. Aquí se reúnen los protagonistas del primer Left 4 Dead (Francis, Louis y Zoey) con los supervivientes de esta secuela.
                   Bill no aparece con vida, ya que se sacrificó para que los demás siguieran a salvo. Salió a la luz el 22 de abril de 2010. El juego cuenta con los cuatro modos de su predecesor: el Un jugador (en el que se juega un solo jugador), el Campaña (en el que se juega en línea con otros jugadores), el Enfrentamiento (podemos jugar como infectados) y el Supervivencia (en el que hay que sobrevivir el mayor tiempo posible). </p>
             </div></div>
